The atomic flip: DAO signatures direct-return, ~190 join sites deleted (Phase 5)
- Every DAO (and the DAO facade) returns plain values; the Phase 3/4
  completedFuture/failedFuture shims are gone
- All bean/REST/converter/filter join sites deleted; orTimeout/exceptionally
  chains become try/catch with their exact log-and-fallback semantics (the
  fail-soft contract each bean documented). IllegalArgumentException from
  binding key validation still escapes -- a caller bug must not read as
  'no bindings'
- Trip.TripEventsDeserializer and Person.getTrips() -- the nested-join sites
  that forced the old pool to be unbounded -- are plain calls (sequential for
  now; Phase 7's structured concurrency restores the fan-out)
- Still CF by design until Phase 7: MailCommands (SES async), PayCommands
  (PayPal), PasswordMigration (own worker pool)
- ActionBeanFailurePathsTest's store-is-down fixture now throws (the CF
  return-type trigger went inert with the flip) and covers the new tails
- 1610 unit tests + armed coverage gate + full Valkey-backed webtest green

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>